# chemu

./: .gitignore  CMakeLists.txt  chip8.c  chip8.h  main.c
include/: chip8.h  chip8_util.h
src/: chip8.c  chip8_util.c  main.c
